Package: aroma.core
===================

Version: 1.4.7 [2010-02-21]
o Added AromaCellCpgFile.R
o Modified docs for AromaCellPositionFile

Version: 1.4.6 [2010-02-19]
o SIMPLIFICATION: Now it is possible to use ChromosomeExplorer without
  having to install the GLAD package (used before for cytobands).
o SIMPLIFICATION: Now it is possible to plot cytobands without having
  to install the GLAD package.
o Argument 'zooms' of ChromosomeExplorer now default to 2^(0:6), 
  instead of 2^(0:7), because the images for zoom 2^7=128 would not 
  display in Firefox for the largest chromosomes.
o Updated getGenomeFile() for ChromosomalModel such that it can be used
  to locate other types of genome annotation files as well, files that
  may be optional (without giving an error).
o Added Human cytoband files to annotationData/genomes/.
o Added annotationData/genomes/ to aroma.core (from aroma.affymetrix).
o Added getOutputSet() for ChromosomalModel.
o Added alpha version of a doCBS().


Version: 1.4.5 [2010-02-10]
o ROBUSTNESS: Now also patches for R.filesets and R.utils are loaded, 
  if available, when aroma.core is loaded.
o CLEANUP: Removed debug print() statements in isCompatibleWith().


Version: 1.4.4 [2010-02-03]
o ROBUSTNESS: Package now requires matrixStats v0.1.9 or newer,
  due to a bug in the earlier versions that would affect smoothing
  of chromosomal signals that contains missing values.
o Package passes R CMD check and all redundancy tests.


Version: 1.4.3 [2010-01-25]
o ROBUSTNESS: Added a sanity check getChromosomes() for class
  AromaUnitChromosomeTabularBinaryFile validating that the file 
  has a 'chromosome' column.
o CLEANUP: Using new Arguments$getTags() where ever possible.


Version: 1.4.2 [2010-01-13]
o ChromosomalModel:s (and and the ChromosomeExplorer) no
  longer require unit names files. 
o getListOfAromaUgpFiles() for ChromosomalModel no longer goes via 
  getListOfUnitNamesFiles().  This opens up the possibility to work 